# fetal-plane-explorer

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.train  Makefile  README.md  SECURITY.md  SUPPORT.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/models/: fetal_plane_mobilenetv3.onnx  fetal_plane_mobilenetv3.pth
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  metadata.py  predict.py
backend/app/core/: config.py  logging.py
backend/app/inference/: model.py  preprocessing.py  uncertainty.py  xai.py
backend/app/models/: requests.py  responses.py
backend/scripts/: create_synthetic_data.py  fetch_real_data.py  prepare_data_robust.py  setup_demo_model.py
backend/tests/: conftest.py  test_api.py
docs/: architecture.md  dataset_card.md  model_card.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/components/: AppBar.ts  ExplanationOverlay.ts  FileUpload.ts  ResultsPanel.ts
frontend/src/services/: api.ts
frontend/src/styles/: main.css  tokens.css
frontend/tests/: smoke.spec.ts
infra/: docker-compose.yml
modeling/scripts/: calibrate.py  convert_to_onnx.py  evaluate_detailed.py  train.py
